--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -553,3 +553,10 @@ a {
 #section-services{
       border-top: 1px solid #e6e6e6;
 }
+
+.divRequestCall{
+  display: none;
+}
+.btnRequestCallMenu{
+  color: #fff !important;
+}
