--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,8 @@ html {
 body {
   font-family: "Work Sans", Arial, sans-serif; }
 
+  p{color: black;}
+
 input, textarea, p {
   font-weight: 300; }
 
@@ -571,7 +573,7 @@ a {
     display: none;
     position: absolute;
     left: 100%;
-    top: -7px;
+    top: -20px;
   }
 
   .nav-item .submenu-left {
